maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:43: error: not found: value set
  set
  ^