maze.pledge.PledgeMaze.scala.code
var sommeAngle=0
override def run() 
{
  while(!estSurBiscuit())
  	{
      if(!isDirectionFree(Direction.NORTH) && sommeAngle!=0)
      	{
      		keepHandOnSideWall()
        }
      else
      	{
          droite()
          sommeAngle-=1
        }
  	}
    
	prendBiscuit()
}

def keepHandOnSideWall()
{
  do
  	{
      avance()
      gauche()
  		sommeAngle+=1
    }
  while(!estFaceMur())  
  droite()
  sommeAngle-=1
}


def isDirectionFree(dir:Direction):Boolean=
{
  var free=false
  var dirInit=getDirection()
  setDirection(dir)
  free=(!estFaceMur())
  setDirection(dirInit)
  return free
  set
}